--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vue": "^2.5.17"
     },
     "dependencies": {
-        "izitoast": "^1.4.0"
+        "chart.js": "^2.7.3",
+        "izitoast": "^1.4.0",
+        "jquery-confirm": "^3.3.2"
     }
 }
